--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Backup files
+*.c~
+
+# Binarios de los ejercicios
+bin/*
+!bin/README.md
+
